<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">WorkFromHome</string>
    <string name="hours_and_rate">Hours: %1$d $/Hour: %2$.2f</string>
    <string name="due_date">Due Date: %1$s</string>
    <string name="is_in_english">In English</string>
    <string name="main_menu_create">POST AN OPENING</string>
    <string name="main_menu_create_short">POST</string>
    <string name="main_menu_view">VIEW MY OPENINGS</string>
    <string name="main_menu_settings">SETTINGS</string>
    <string name="main_menu_quit">QUIT</string>
    <string name="not_implemented">Not implemented.</string>
    <string name="flag_us" translatable="false">USD</string>
    <string name="flag_eu" translatable="false">EUR</string>
    <string name="flag_ar" translatable="false">ARS</string>
    <string name="flag_uk" translatable="false">GBP</string>
    <string name="flag_br" translatable="false">BRL</string>
    <string name="context_menu_apply">Apply for this opening</string>
    <string name="context_menu_share">Share this opening</string>
    <string name="application_registered">Your application has been registered.</string>
    <string name="share_listing">Share this opening…</string>
    <string name="post_success">Post successful.</string>
    <string name="share_message">Check out this WorkFromHome opening! A %1$s position is open and the going rate is %2$.2f!</string>
    <string name="failure_description_empty">The opening description cannot be empty</string>
    <string name="post_jobCategory">Category</string>
    <string name="post_jobCurrency">Currency</string>
    <string name="post_jobEstimate">Estimate (hrs)</string>
    <string name="post_jobHourlyRate">Hourly Rate</string>
    <string name="post_changeDueDate">CHANGE</string>
    <string name="failure_currency_unchecked">You must select a currency.</string>
    <string name="failure_estimate_empty">You must input an estimate</string>
    <string name="failure_estimate_zero">The estimate cannot be zero</string>
    <string name="failure_hourlyrate_empty">You must input an hourly rate</string>
    <string name="failure_hourlyrate_zero">The hourly rate cannot be zero</string>
    <string name="failure_due_date">Due date must be in the future</string>
</resources>
