<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_create"
        android:labelFor="@+id/postDescription" />

    <EditText
        android:id="@id/postDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_jobCategory"
            android:labelFor="@+id/postCategorySpinner"/>
        <Spinner
            android:id="@id/postCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_jobCurrency" />

    <RadioGroup
        android:orientation="horizontal"
        android:id="@+id/postCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/postCurrencyARS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/flag_ar"
            android:labelFor="@id/postCurrencyARS"
            android:contentDescription="@string/flag_ar"
            android:layout_gravity="center_horizontal"
            android:scaleX="4"
            android:scaleY="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <RadioButton
            android:id="@+id/postCurrencyBRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/flag_br"
            android:labelFor="@id/postCurrencyBRL"
            android:contentDescription="@string/flag_br"
            android:layout_gravity="center_horizontal"
            android:scaleX="4"
            android:scaleY="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <RadioButton
            android:id="@+id/postCurrencyEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/flag_eu"
            android:labelFor="@id/postCurrencyEUR"
            android:contentDescription="@string/flag_eu"
            android:layout_gravity="center_horizontal"
            android:scaleX="4"
            android:scaleY="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <RadioButton
            android:id="@+id/postCurrencyGBP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/flag_uk"
            android:labelFor="@id/postCurrencyGBP"
            android:contentDescription="@string/flag_uk"
            android:layout_gravity="center_horizontal"
            android:scaleX="4"
            android:scaleY="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>

        <RadioButton
            android:id="@+id/postCurrencyUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/flag_us"
            android:labelFor="@id/postCurrencyUSD"
            android:contentDescription="@string/flag_us"
            android:layout_gravity="center_horizontal"
            android:scaleX="4"
            android:scaleY="4"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:labelFor="@+id/postEstimate"
            android:text="@string/post_jobEstimate"/>
        <EditText
            android:id="@id/postEstimate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/post_jobHourlyRate"
            android:labelFor="@+id/postHourlyRate" />
        <EditText
            android:id="@id/postHourlyRate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/postDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <Button
            android:id="@+id/postDueDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_changeDueDate"/>

    </LinearLayout>
    <Button
        android:id="@+id/postButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_create_short"/>
</LinearLayout>