<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/jobPosition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"/>
    <TextView
        android:id="@+id/jobDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/jobEstimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hours_and_rate"/>
        <ImageView
            android:id="@+id/jobCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/jobDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:layout_gravity="center"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:enabled="false"
            android:id="@+id/jobIsInEnglish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/is_in_english" />
    </LinearLayout>

</LinearLayout>